# atticus

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
examples/: car.rs
src/: actor.rs  error.rs  lib.rs
tests/: abort_join.rs  request.rs
tests/common/: mod.rs
