[package]
name = "atticus"
description = "A mimimal API to create asynchronous actors"
repository = "https://github.com/blinking8888/atticus"
readme = "README.md"
keywords = [ "async", "actor", "channel", "tokio" ]
categories = [ "asynchronous", "concurrency"  ]
license = "MIT OR Apache-2.0"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["rt", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "test-util", "tokio-macros", "macros"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
enum_glob_use = "deny"
module_name_repetitions = "allow"
